# testing_grounds

./: .gitmodules  CHANGELOG.md  a.txt  aaaaa.json  gen_cometido.py  migrate_script_routes.py  pyproject.toml  requirements.txt  sub_symlink.md  sym_gen.py  table_type.py  test.py  tipos_bdd.py
.github/workflows/: bump.yml
scripts_generation/: main.py  pr_maker.py  pyproject.toml
scripts_generation/gen_scripts/: gen_calzo_on_create.py  gen_calzo_on_delete.py  gen_cometido_on_delete.py  gen_funcionario_on_delete.py  lib.py
testing_ground/: t.py  test.py
