[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "testing_ground"
requires-python = ">= 3.10"
version = "0.0.1"
authors=[{name="Francisco", email="francisco.ortiz@coderhub.cl"}]
dependencies = [
    "typing-extensions==4.12.*",
]

[tool.setuptools]
packages=["testing_ground"]

