[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "testing_ground"
requires-python = ">= 3.10"
version = "0.4.1"
authors=[{name="Francisco", email="francisco.ortiz@coderhub.cl"}]
dependencies = [
    "typing-extensions==4.12.*",
]

[tool.setuptools]
packages=["testing_ground"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$major.$minor.$patch$prerelease"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
